k8s/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vetro
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vetro
  template:
    metadata:
      labels:
        app: vetro
    spec:
      containers:
        - name: vetro
          image: 208073622683.dkr.ecr.us-east-1.amazonaws.com/ibm/vetro:latest
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: vetro-service
spec:
  selector:
    app: vetro
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
